# proj_xl_test

./: .gitignore  LICENSE  README.md  pyproject.toml  test_unified_scenarios.py  test_unified_scenarios_table_obj.py
src/excel_template_renderer/: __init__.py  api.py  context.py  exceptions.py
src/excel_template_renderer/core/: block_manager.py  container.py  object_registry.py  position_calculator.py  render_coordinator.py  renderer.py  tag_relocator.py  template_scanner.py
src/excel_template_renderer/utils/: __init__.py  dependency_utils.py  formula_processor.py  image_manager.py  process_isolation.py  range_checker.py  registry_utils.py  table_validator.py
src/templexl/: __init__.py  api.py  exceptions.py  report.py  result.py
src/templexl/core/: __init__.py  block_manager.py  container.py  parser.py  renderer.py  template_scanner.py
src/templexl/models/: __init__.py  base.py  container.py  objects.py  tag.py
src/templexl/utils/: __init__.py  image_manager.py  position_utils.py  range_checker.py  table_validator.py  tag_sorter.py
temp_docs/: PRD_stage_1.md
tests/: README.md  benchmark.py  fixtures.py  generate_golden.py  golden_compare.py  render_adapter.py  test_characterization.py  test_golden.py  test_public_api.py
tests/golden/: non_table.xlsx  table.xlsx
tests/test_templates/: template_non_table.xlsx  template_table.xlsx
