[project]
name = "proj-xl-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "pandas>=2.0.3",
    "pillow>=10.4.0",
    "pytest>=8.3.5",
    "regex>=2024.11.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
