[project]
name = "templexl"
version = "0.1.0"
description = "基於 openpyxl 的 Excel 模板報表引擎——以 Excel 檔作為模板，將資料渲染成報表。"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Bryson Xue", email = "bryson0083@gmail.com" }]
keywords = ["excel", "openpyxl", "template", "report", "xlsx", "spreadsheet", "xlwings-reports"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.0.3",
]

[project.urls]
# TODO: 確認實際 repo 網址後更新
Homepage = "https://github.com/bryson0083/templexl"
Repository = "https://github.com/bryson0083/templexl"
Issues = "https://github.com/bryson0083/templexl/issues"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/templexl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
